--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
 
   "name": "Pomodoro",
   "version": "0.1.0",
-  "permissions": ["<all_urls>", "activeTab" ,"notifications", "tabs", "storage"],
+  "permissions": ["notifications"],
   "browser_action": {
     "default_popup": "home.html",
     "default_icon" : {
@@ -23,8 +23,7 @@
   ],
 
   "background": {
-    "scripts": ["background.js"],
-    "persistent" : false
+    "scripts": ["background.js"]
   },
   "icons": {
     "16": "tomato.png",
